--- a/quote.html
+++ b/quote.html
@@ -131,9 +131,16 @@
                               <div class="col">
                                 <input type="text" name="service" class="form-control" placeholder="Nama Servis" required>
                               </div>
-                              <div class="col">
-                                <input type="text" name="booking" class="form-control" placeholder="Booking servis Hari/tanggal/bulan" required>
-                              </div>
+                              <div class="form-group">
+                            <label for="subject">
+                                Subject</label>
+                            <select id="subject" name="subject" class="form-control" required="required">
+                                <option value="na" selected="">Choose One:</option>
+                                <option value="service">General Customer Service</option>
+                                <option value="suggestions">Suggestions</option>
+                                <option value="product">Product Support</option>
+                            </select>
+                        </div>
                               <div class="col">
                                 <input type="text" name="number" class="form-control" placeholder="no whatsapp" required>
                               </div>
