--- a/quote.html
+++ b/quote.html
@@ -130,10 +130,10 @@
                               </div>
                               <div class="col">
                                 <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
+                                <option value="na" selected="">Nanma Servis:</option>
+                                <option value="service">Servis Aircon</option>
+                                <option value="suggestions">Servis Icebox/Frezer</option>
+                                <option value="product">Perkhidmatan Lain</option>
                             </select>
                               </div>
                               <div class="col">
