--- a/quote.html
+++ b/quote.html
@@ -130,7 +130,7 @@
                               </div>
                               <div class="col">
                                 <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Nanma Servis:</option>
+                                <option value="na" selected="">Nama Servis:</option>
                                 <option value="service">Servis Aircon</option>
                                 <option value="suggestions">Servis Icebox/Frezer</option>
                                 <option value="product">Perkhidmatan Lain</option>
