--- a/quote.html
+++ b/quote.html
@@ -137,7 +137,19 @@
                             </select>
                               </div>
                               <div class="col">
-                                <input type="text" name="booking" class="form-control" placeholder="Booking servis Hari/tanggal/bulan" required>
+                                <body>
+
+    <h3>
+        Setting input type date in dd-mm-yyyy format
+    </h3>
+
+    <label for="start">
+        Enter the Date:
+    </label>
+
+    <input type="date" name="begin" placeholder="dd-mm-yyyy" 
+           value="" min="1997-01-01" max="2030-12-31">
+</body>
                               </div>
 
                               <div class="col">
