--- a/quote.html
+++ b/quote.html
@@ -138,9 +138,7 @@
                               </div>
                               <div class="col">
                                 <body>
-    <label for="start">
-        Enter the Date:
-    </label>
+    <label for="start">Pada Hari</label>
 
     <input type="date" name="begin" placeholder="dd-mm-yyyy" 
            value="" min="1997-01-01" max="2030-12-31">
