--- a/quote.html
+++ b/quote.html
@@ -137,13 +137,11 @@
                             </select>
                               </div>
                               <div class="col">
-                                <body>
-    <label for="start">Pada Hari</label>
-
-    <input type="date" name="begin" placeholder="dd-mm-yyyy" 
+                              <select id="subject" name="subject" class="form-control" required="required">
+                                <option value="na" selected="">Nama Servis</option>
+                                  <input type="date" name="begin" placeholder="dd-mm-yyyy" 
            value="" min="1997-01-01" max="2030-12-31">
-</body>
-                              </div>
+                                </div>
 
                               <div class="col">
                                 <input type="text" name="number" class="form-control" placeholder="no whatsapp" required>
