--- a/quote.html
+++ b/quote.html
@@ -137,8 +137,7 @@
                             </select>
                               </div>
                               <div class="col">
-                              <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Nama Servis</option>
+                              <input type="email" name="email" class="form-control" placeholder="Email Anda" required>
                                   <input type="date" name="begin" placeholder="dd-mm-yyyy" 
            value="" min="1997-01-01" max="2030-12-31">
                                 </div>
