--- a/quote.html
+++ b/quote.html
@@ -137,7 +137,7 @@
                             </select>
                               </div>
                               <div class="col">
-                              <input type="email" name="email" class="form-control" placeholder="Email Anda" required>
+                              <label for="start">Enter the Date:</label>
                                   <input type="date" name="begin" placeholder="dd-mm-yyyy" 
            value="" min="1997-01-01" max="2030-12-31">
                                 </div>
